1、添加创建表主键、外键、外键约束、唯一键、notnull接口 2、添加创建数据库类